--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1 class="title">Rick and More</h1>
-    <nav class="navigation" data-js="navigation"></nav>
+    <nav class="navigation" data-js="navigation">
       <button class="button button--prev" data-js="button-prev">
         previous
       </button>
