--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <h1 class="title">Rick and More</h1>
     <nav class="navigation" data-js="navigation">
       <button class="button button--prev" data-js="button-prev">
-        previous
+        &lt;&lt;&lt; previous
       </button>
       <span class="navigation__pagination" data-js="pagination">1 / 42</span>
-      <button class="button button--next" data-js="button-next">next</button>
+      <button class="button button--next" data-js="button-next">next &gt;&gt;&gt;</button>
     </nav>
     <main>
       
