--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1 class="title">Rick and More</h1>
+    <h1 class="title"><img src=assets/rick-and-morty.png alt="Rick and Morty"></h1>
     <nav class="navigation" data-js="navigation">
       <button class="button button--prev" data-js="button-prev">
         &lt;&lt;&lt; previous
