adjustments to text-content of nav-buttons

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     </main>
     <nav class="navigation" data-js="navigation">
       <button class="button button--prev" data-js="button-prev">
-        &lt;&lt;&lt; previous
+        &lt;&lt; previous &lt;&lt;
       </button>
       <span class="navigation__pagination" data-js="pagination">1 / 42</span>
-      <button class="button button--next" data-js="button-next">next &gt;&gt;&gt;</button>
+      <button class="button button--next" data-js="button-next">&gt;&gt; next &gt;&gt;</button>
     </nav>
     <script type="module" src="./index.js"></script>
   </body>
